DevOps_CICD_Project/terraform/internet_gateway.tf
resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.main.id

  tags = {
    Name = "DevOps-IGW"
  }

}
